fix: Move list elements inside
If the list is positioned outside, it may overlap in two-column layout
with the previous column.

This is done using padding, because the list-style-position does mess up
alignment for ol

--- a/src/scss/theme/layout.scss
+++ b/src/scss/theme/layout.scss
@@ -3,9 +3,10 @@
 */
 .reveal {
 	ol, dl, ul {
+		padding: 0 0 0 1em;
 		line-height: 1.5em;
 		text-align: left;
-		margin: 0 0 0 0em;
+		margin: 0;
 	}
 
 	ul{
